--- a/src/components/login/switch.module.css
+++ b/src/components/login/switch.module.css
@@ -56,7 +56,7 @@
       text-decoration:none;
       padding:15px;
       background: #dae0de;
-      color: #beee11;
+      color: #10a549;
       font-size:20px;
       float:left;
       width:50%;
