--- a/src/components/ProductPage/Header.module.css
+++ b/src/components/ProductPage/Header.module.css
@@ -1,5 +1,4 @@
 
-
 .header {
     position: fixed;
     top: 0;
@@ -41,17 +40,23 @@
     justify-content: space-between;
 }
 
-  .mainimage {
-    position: absolute;
-    top: 30px;
-    width: 100%;
-    height: 25rem;
-    z-index: 0;
-    overflow: hidden;
+
+
+  .NavDropdown {
+    color: #dd6119;
+    background-color:rgb(207, 205, 193);
+    font-weight: bold;
+    position: relative;
+    right: -1650px;
+    margin-top: 0px;
+    justify-content: space-between;
   }
-  
-  .mainimage img {
-    width: 110%;
-    height: 100%;
-    object-fit: cover;
+
+
+
+
+  .nav
+  {
+    color: white;
+
   }
