--- a/src/components/ProductPage/Header.module.css
+++ b/src/components/ProductPage/Header.module.css
@@ -44,7 +44,7 @@
 
   .NavDropdown {
     color: #dd6119;
-    background-color:rgb(207, 205, 193);
+    background-color:rgba(233, 230, 215, 0.877);
     font-weight: bold;
     position: relative;
     right: -1650px;
