--- a/src/components/entity/Category.module.css
+++ b/src/components/entity/Category.module.css
@@ -1,51 +1,78 @@
 
+.bodddy{
 
-    .catback {
-      text-decoration: none;
-    }
-  
-  
-    h2 {
-      display: block;
-      padding: 0px 0 0px 0;
-      margin:0 0 0px 0;
-      text-align: left;
-      border-bottom: 1px solid #ccc;
-      color: rgb(36, 39, 38);
-  
-    }
+  background-image: url(../../assets/bg.png);
+  font-family: 'Titillium Web', sans-serif;
+  background-repeat: no-repeat;
+  position: fixed;
+  min-width: 100%;
+  min-height: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: center;
+}
 
-    .li
-    {
-      padding: 20px 20 20px 20;
-      margin:0 20px 20px 0;
-      display:block;
-        
-        text-decoration:none;
-        padding:15px;
-        background: #dae0de;
-        color: #173b2c;
-        font-size:20px;
-        float:left;
-        width:50%;
-        text-align:center;
-        cursor:pointer;
-        transition:.5s ease;
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+.a {
+  color: rgb(5, 36, 25);
+  text-decoration:none;
+  transition:.5s ease;
+}
   
-    }
-    
-    li:hover
-    {
-      background:lighten(#20d190, 5%);
-      color: #08fda7
-    }
-    
-    li:active a
-    {
-        background-color: #0dfc98;
-        color:white;
-     }
+.form {
+    align-self: center;
+  align-items: center;
+  background: #ffffff ;
+  padding: 60px;
+  max-width:450px;
+  margin:40px auto;
+  border-color: rgb(10, 10, 10);
+  border-radius:50\px;
+  box-shadow:0 4px 10px 4px rgba(#494e53,.3);
+}
 
-         
+.tab-group {
+  list-style:none;
+  padding:0;
+  margin:0 0 40px 0;
+}
 
-   
+.tab-group:after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.tab {
+  display:block;
+    text-decoration:none;
+    padding:15px;
+    background: #e0dada;
+    color: #5f9674;
+    font-size:20px;
+    float:left;
+    width:50%;
+    text-align:center;
+    cursor:pointer;
+    transition:.5s ease;
+
+}
+
+
+li a:hover
+{
+  color: #ffffff;
+  background-color: #187047;
+}
+
+.active
+{
+    background: #4ab488;
+    color: #ffffff
+ }
