--- a/src/components/cart/Modal.module.css
+++ b/src/components/cart/Modal.module.css
@@ -25,8 +25,8 @@
   
   @media (min-width: 768px) {
     .modal {
-      width: 40rem;
-      left: calc(50% - 20rem);
+      width: 50rem;
+      left: 42em
     }
   }
   
