--- a/src/components/ProductPage/Header.module.css
+++ b/src/components/ProductPage/Header.module.css
@@ -1,62 +1,57 @@
-
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 5rem;
-    background-color: #51c790;
-    color: white;
-    display: flex;
-    align-items: center;
-    padding: 0 0%;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-    z-index: 10;
-  }
-
-  .img {
-    width: 5%;
-    height: 6rem;
-    object-fit:contain;
-    object-position:1em;
-  }
-
-  .header h1 {
-      position: absolute;
-      left: 150px;
-  }
-  
-  .button1 {
-      position: absolute;
-      right: 200px;
-      margin-top: 0px;
-      justify-content: space-between;
-  }
-
-  .button2 {
-    position: absolute;
-    right: 50px;
-    margin-top: 0px;
-    justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5rem;
+  background-color: #51c790;
+  color: white;
+  display: flex;
+  align-items: center;
+  padding: 0 0%;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  z-index: 10;
 }
 
+.img {
+  width: 5%;
+  height: 6rem;
+  object-fit: contain;
+  object-position: 1em;
+}
 
+.header h1 {
+  position: absolute;
+  left: 150px;
+}
 
-  .NavDropdown {
-    color: #dd6119;
-    background-color:rgb(241, 239, 230);
-    font-weight: bold;
-    position: relative;
-    right: -1650px;
-    margin-top: 0px;
-    justify-content: space-between;
-  }
+.button1 {
+  position: absolute;
+  right: 200px;
+  margin-top: 0px;
+  justify-content: space-between;
+}
 
+.button2 {
+  position: absolute;
+  right: 50px;
+  margin-top: 0px;
+  justify-content: space-between;
+}
 
+.NavDropdown {
+  background-color: rgb(241, 239, 230);
+  font-weight: bold;
+  position: relative;
+  /* right: -1650px; */
+  margin-top: 0px;
+  justify-content: space-between;
+}
 
+.nav-link {
+  color: #dd6119 !important;
+}
 
-  .nav
-  {
-    color: white;
-
-  }
+.nav {
+  color: white;
+}
