--- a/src/components/ProductPage/HeaderCartButton.module.css
+++ b/src/components/ProductPage/HeaderCartButton.module.css
@@ -1,6 +1,7 @@
 .button {
     cursor: pointer;
     font: inherit;
+    font-size: 1.2em;
     border: none;
     background-color: #108149;
     color: white;
