--- a/src/components/login/Style.module.css
+++ b/src/components/login/Style.module.css
@@ -37,7 +37,7 @@ img {
 label {
         font-size: 20px;
     }
-input {
+input:not([type=checkbox]):not([type=radio]) {
         margin-top: 6px;
         min-width: 18em;
         height: 37px;
@@ -49,7 +49,7 @@ input {
         border-radius: 4px;
         transition: all 250mx ease-in-out;
     }
-input:focus {
+input:focus:not([type=checkbox]):not([type=radio]) {
         outline: none;
         box-shadow: 0px 0px 12px 0.8px #0ece7496;
     }
